[project]
name = "learntube-submission"
version = "0.1.0"
description = "linkedin optimizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.4",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-groq>=0.3.4",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langgraph-supervisor>=0.0.27",
    "lxml>=5.4.0",
    "streamlit>=1.46.0",
    "uvicorn>=0.34.3",
]
